--- a/cpu_crate/Cargo.toml
+++ b/cpu_crate/Cargo.toml
@@ -9,5 +9,8 @@ edition = "2021"
 anyhow = "1.0"
 bytemuck = "1.9"
 image = "0.24"
-pollster = "0.2"
-wgpu = "0.14"
+pollster = "0.3.0"
+wgpu = "0.18.0"
+
+[build-dependencies]
+spirv-builder = "0.9.0"
