--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ edition = "2021"
 #bevy = "0.12.1"
 clap = { version = "4.4.11", features = ["derive"] }
 indicatif = { version = "0.17.7", features = ["rayon"] }
+itertools = "0.12.0"
 rand = "0.8.5"
 rayon = "1.8.0"
 
@@ -24,5 +25,5 @@ quote = "*"
 syn = "*"
 
 [profile.release]
-strip = "symbols"
 lto = true
+codegen-units = 1
