--- a/cpu_crate/Cargo.toml
+++ b/cpu_crate/Cargo.toml
@@ -7,10 +7,26 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-bytemuck = "1.9"
+env_logger = "0.10.1"
+futures = "0.3.30"
 image = "0.24"
 pollster = "0.3.0"
-wgpu = "0.18.0"
+wgpu = { version = "0.18.0", features = ["spirv", "vulkan-portability"] }
+structopt = "0.3"
+strum = { version = "0.23.0", default_features = false, features = [
+    "std",
+    "derive",
+] }
+spirv-builder = "0.9.0"
+winit = { version = "0.29.0", features = ["android-native-activity", "rwh_05"] }
+cfg-if = "1.0.0"
+spirv-std = "0.9.0"
+bytemuck = { version = "1.9", features = ["derive"] }
 
 [build-dependencies]
 spirv-builder = "0.9.0"
+
+[features]
+default = ["use-compiled-tools"]
+use-installed-tools = ["spirv-builder/use-installed-tools"]
+use-compiled-tools = ["spirv-builder/use-compiled-tools"]
